Refactor: Make S3 config optional in .env.example for backend

--- a/author-amplify-core-api/.env.example
+++ b/author-amplify-core-api/.env.example
@@ -10,16 +10,21 @@ DATABASE_URL=postgresql://postgres:admin@localhost:5432/author_amplify_db
 
 # Clerk Authentication (Backend SDK)
 # Get this from your Clerk Dashboard -> API Keys -> Backend API Keys
-CLERK_SECRET_KEY=your_clerk_secret_key_here
+# Required when Clerk integration is implemented.
+CLERK_SECRET_KEY=your_clerk_secret_key_here_when_ready
 
 # AWS Configuration (for S3 file storage)
-AWS_ACCESS_KEY_ID=your_aws_access_key_id_here
-AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key_here
-AWS_S3_BUCKET_NAME=your_s3_bucket_name_here
-AWS_REGION=your_aws_s3_bucket_region_here # e.g., us-east-1
+# OPTIONAL for initial local development if not using S3.
+# If you plan to use local file storage for development, these can be left blank or commented out.
+# If using S3, uncomment and fill these:
+# AWS_ACCESS_KEY_ID=your_aws_access_key_id_here
+# AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key_here
+# AWS_S3_BUCKET_NAME=your_s3_bucket_name_here
+# AWS_REGION=your_aws_s3_bucket_region_here # e.g., us-east-1
 
 # RabbitMQ Connection (for asynchronous task queue)
 # Example: amqp://username:password@hostname:port
+# Required when RabbitMQ integration is implemented.
 RABBITMQ_URL=amqp://guest:guest@localhost:5672
 
 # JWT Settings (If implementing custom JWT, not strictly needed with Clerk managing tokens initially)
@@ -28,3 +33,10 @@ RABBITMQ_URL=amqp://guest:guest@localhost:5672
 
 # Logging Level (optional, for custom logger)
 # LOG_LEVEL=debug
+
+# Local File Storage Path (If using local storage instead of S3 for development)
+# This path should be writable by the application.
+# Example for Windows: LOCAL_FILE_STORAGE_PATH=C:/path/to/your/uploads
+# Example for Linux/macOS: LOCAL_FILE_STORAGE_PATH=/path/to/your/uploads
+# Make sure this directory exists.
+# LOCAL_FILE_STORAGE_PATH=./uploads
